--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <ul>
           <li>Designed and brought to market a user friendly wifi enabled addressable LED strips</li>
           <li>Built on top of open source MIT licensed software to create firmware for the ESP8266</li>
-          <li>Utilized CAD to model the case of the product</li>
+          <li>Utilized CAD to model the product casing and sourced parts from local print farms</li>
         </ul>
       </article>
       <article>
@@ -174,7 +174,7 @@
             </button>
           </model-viewer>
           <p class="center">
-            <small>A wifi enabled addressable LED controller board built for Luminary</small>
+            <small>A wifi enabled addressable LED controller board designed by me</small>
           </p>
         </article>
         <div>
@@ -195,6 +195,9 @@
             <li><a href="https://github.com/Ethan-C-Honzik/MidiInput">A Java program</a> that receives midi data and
               forwards it to <a href="https://github.com/Ethan-C-Honzik/ArduinoSerialMonophonicSynth">C++ Firmware</a>
               over serial for audio synthesis on an Arduino.
+            </li>
+            <li><a href="https://github.com/Ethan-C-Honzik/HumidityAlarm">C++ firmware</a> that runs on an ESP8266
+              proving a web dashboard showing current humidity levels and triggering an alarm if a threshold is met.
             </li>
           </ul>
         </div>
@@ -233,7 +236,7 @@
         <article>
           <p>I've been making games in some form since 2016. Though, haven't done much game development since high
             school. Back in 2017 I started a Rhythm game shown in this youtube video. It is able to dynamically generate
-            levels in real time from user song files. I abandoned it due to scope creep and a general feeling that the
+            levels in real time from player song files. I abandoned it due to scope creep and a general feeling that the
             game just wasn't very fun. It was essentially a music visualizer pretending to be a game. After this I
             tended to just make music visualizers.</p>
         </article>
@@ -246,6 +249,68 @@
           </div>
         </article>
       </div>
+    </article>
+    <article>
+      <h2 class="center">Robotics</h2>
+      <p>I am a current FIRST robotics alumni. Back in high school I was the team captain and lead programmer of the
+        team. Since graduating I've mentored the team helping teach programming and electronics to high school students.
+      </p>
+      <h4 class="center">Accomplishments while on the robotics team</h4>
+      <div class="grid">
+        <article>
+          <h5 class="center">Computer Vision Driver Assist / Autonomous driving Features With OpenCV</h5>
+          <p>Targets were able to be tracked by an algorithm running on a raspberry pi. This data was then streamed to
+            the main on board computer over ethernet. This allowed for both fully autonomous routines as well as driver
+            assist features such as target tracking upon button press. The repos for this are here:</p>
+          <ul>
+            <li><a href="https://github.com/Team-4664-ButlerBots/Robotics2020">Main Repo</a></li>
+            <li><a href="https://github.com/Team-4664-ButlerBots/RoboticsVision2020">Raspberry pi OpenCV code</a></li>
+          </ul>
+        </article>
+        <article>
+          <h5 class="center">A network proxy used to connect the robot to the Unity Game Engine</h5>
+          <p>Most of the networking on the robot was done with the <a
+              href="https://docs.wpilib.org/en/stable/docs/software/networktables/networktables-intro.html">network
+              tables</a> API provided by the WPI Library. I wanted to integrate unity with the robot and so I built this
+            application to serve as a layer between unity and the robot.</p>
+          <a href="https://github.com/Team-4664-ButlerBots/JavaTcpNetworkTableServer">Github link</a>
+        </article>
+      </div>
+      <article>
+        <h5 class="center">Robot Simulator</h5>
+        <div class="grid">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/8nMis_laCOA?si=MIdWO62eZRLUnJm-"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+          <p>
+            Back in 2018 we needed a way to train for the robotics competition but didn't have access to the robot. As a
+            solution I created this simulator application written in unity. The simulator mimicked the look of our, at
+            the time, unfinished robot. It also had a 1 to 1 recreation of the arena taken from the FIRST provided cad
+            files.
+          </p>
+        </div>
+      </article>
+    </article>
+    <article>
+      <h2 class="center">WEBGL and HTML5 Canvas Projects</h2>
+      <ul>
+        <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/rawJS/index.html">A test I
+            did of working with the plain HTML5 canvas api</a>
+        </li>
+        <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/p5Version/index.html">A
+            music visualizer with custom basic 2d physics made in p5js</a>
+        </li>
+        <li>
+          <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Experiments/datGUI/index.html">A p5js sketch made
+            to test dat.GUI</a>
+        </li>
+        <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Sets/Set2/index.html">A 3d music visualizer
+            built with p5 and WEBGL</a>
+        </li>
+        <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/rawJS/index.html"></a>
+      </ul>
     </article>
     <article>
       <h2 class="center">Freelance Blender VFX Artist</h2>
