--- a/index.html
+++ b/index.html
@@ -294,26 +294,47 @@
       </article>
     </article>
     <article>
-      <h2 class="center">WEBGL and HTML5 Canvas Projects</h2>
-      <ul>
-        <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/rawJS/index.html">A test I
-            did of working with the plain HTML5 canvas api</a>
-        </li>
-        <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/p5Version/index.html">A
-            music visualizer with custom basic 2d physics made in p5js</a>
-        </li>
-        <li>
-          <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Experiments/datGUI/index.html">A p5js sketch made
-            to test dat.GUI</a>
-        </li>
-        <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Sets/Set2/index.html">A 3d music visualizer
-            built with p5 and WEBGL</a>
-        </li>
-        <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/rawJS/index.html"></a>
-      </ul>
+      <h2 class="center">WEBGL and HTML5 Canvas</h2>
+      <div class="grid">
+        <article>
+          <h5 class="center">Misc Projects</h5>
+          <ul>
+            <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/rawJS/index.html">A
+                test
+                I
+                did of working with the plain HTML5 canvas api</a>
+            </li>
+            <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise1/p5Version/index.html">A
+                music visualizer with custom basic 2d physics made in p5js</a>
+            </li>
+            <li>
+              <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Experiments/datGUI/index.html">A p5js sketch
+                made to test dat.GUI</a>
+            </li>
+            <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Sets/Set2/index.html">A 3d music visualizer
+                built with p5 and WEBGL</a>
+            </li>
+            <li><a href="https://ethan-c-honzik.github.io/RandomWebProjects/Excercises/Exercise3/index.html">A flow
+                field visualizer built with p5</a>
+            </li>
+            <li>
+              <a href="https://ethan-c-honzik.github.io/cg-illumination/">A class project built in vue with another
+                student</a>. The standard illumination model was built from scratch in GLSL.
+            </li>
+          </ul>
+        </article>
+        <article>
+          <h5 class="center">A Typescript and Parcel template for p5.js</h5>
+          <p>I'm a fan of <a href="https://p5js.org/">p5js.org</a> for creative coding projects. Thing is, I much prefer
+            Typescript to plain Javascript and I like to be able to use NPM to manage my packages with es6 syntax. For
+            various reasons p5js doesn't always play well in these environments and so I made this template both for me
+            and any others that might be interest in using modern web tooling with p5. Usage instructions are documented
+            for others in the <a href="https://github.com/Ethan-C-Honzik/P5-Typescript-Parcel-Template">repo</a> readme.</p>
+        </article>
+      </div>
     </article>
     <article>
-      <h2 class="center">Freelance Blender VFX Artist</h2>
+      <h2 class="center">Freelance Blender VFX Work</h2>
       <div class="grid">
         <div>
           <p>I've done some freelance work with blender. One client I've worked with is Xeuphoria. This video was made
