--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <img src="assets/CDEP.jpg" />
         <div>
           <p>
-            CDEP stands for collection of depth enhanced panoramas. It is algorithm for reconstructing 360 views from a
-            novel viewpoint when given a dataset of depth enhanced panoramas. Depth can either be included from a LIDAR
-            scanner or structure from motion algorithms can be used to estimate a point cloud that can be converted to
-            depths.
+            CDEP stands for Collection of Depth-Enhanced Panoramas. It’s an algorithm designed to reconstruct 360-degree
+            views from a novel viewpoint using a dataset of depth-enhanced panoramas. The depth information can be
+            obtained either from a LIDAR scanner or by applying structure-from-motion algorithms to estimate a point
+            cloud, which can then be converted into depth values.
           </p>
           <p>
             I created two implementations of this algorithm in unity written in C# and HLSL. Additionally I contributed
@@ -329,7 +329,8 @@
             Typescript to plain Javascript and I like to be able to use NPM to manage my packages with es6 syntax. For
             various reasons p5js doesn't always play well in these environments and so I made this template both for me
             and any others that might be interest in using modern web tooling with p5. Usage instructions are documented
-            for others in the <a href="https://github.com/Ethan-C-Honzik/P5-Typescript-Parcel-Template">repo</a> readme.</p>
+            for others in the <a href="https://github.com/Ethan-C-Honzik/P5-Typescript-Parcel-Template">repo</a> readme.
+          </p>
         </article>
       </div>
     </article>
